--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     "license": "MIT",
     "require": {
         "php": ">=5.6.0",
-        "laravel/framework": "~5.3",
+        "laravel/framework": "~5.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.4",
+        "phpunit/phpunit": "~5.4"
     },
     "minimum-stability": "dev",
     "autoload": {
